update:fixed some bugs

--- a/Quotify/index.html
+++ b/Quotify/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quotify</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.6.1/toastify.min.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -17,12 +21,13 @@
         <div class="buttons-div">
           <button id="tweet" class="buttons">Share on X</button>
           <button id="copy" class="buttons">Copy to Clipboard</button>
-          <button id="new-quote" class="buttons">New Qoute</button>
+          <button id="new-quote" class="buttons">New Quote</button>
         </div>
       </div>
       <button id="export" class="buttons">Download Background</button>
     </div>
 
     <script src="./scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.6.1/toastify.min.js"></script>
   </body>
 </html>
